third_party/move/move-compiler-v2/tests/ability-check/typing/neq_invalid.exp

Diagnostics:
error: cannot use `u128` with an operator which expects a value of type `u8`
   ┌─ tests/ability-check/typing/neq_invalid.move:13:21
   │
13 │         (0: u8) != (1: u128);
   │                     ^

error: cannot use `bool` with an operator which expects a value of type `integer`
   ┌─ tests/ability-check/typing/neq_invalid.move:14:14
   │
14 │         0 != false;
   │              ^^^^^

error: reference type `&integer` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:15:12
   │
15 │         &0 != 1;
   │            ^^
   │
   = required by instantiating type parameter `T` of function `!=`

error: cannot use `&integer` with an operator which expects a value of type `integer`
   ┌─ tests/ability-check/typing/neq_invalid.move:16:14
   │
16 │         1 != &0;
   │              ^^

error: cannot use `&S` with an operator which expects a value of type `S`
   ┌─ tests/ability-check/typing/neq_invalid.move:17:14
   │
17 │         s != s_ref;
   │              ^^^^^

error: reference type `&mut S` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:18:15
   │
18 │         s_mut != s;
   │               ^^
   │
   = required by instantiating type parameter `T` of function `!=`

error: unable to infer instantiation of type `G0<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/ability-check/typing/neq_invalid.move:26:9
   │
26 │         G0{} != G0{};
   │         ^^^^

error: unable to infer instantiation of type `G1<key>` (consider providing type arguments or annotating the type)
   ┌─ tests/ability-check/typing/neq_invalid.move:27:9
   │
27 │         G1{} != G1{};
   │         ^^^^

error: unable to infer instantiation of type `G2<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/ability-check/typing/neq_invalid.move:28:9
   │
28 │         G2{} != G2{};
   │         ^^^^

error: tuple type `()` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:32:12
   │
32 │         () != ();
   │            ^^
   │
   = required by instantiating type parameter `T` of function `!=`

error: tuple type `(integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:33:16
   │
33 │         (0, 1) != (0, 1);
   │                ^^
   │
   = required by instantiating type parameter `T` of function `!=`

error: tuple type `(integer, integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:34:19
   │
34 │         (1, 2, 3) != (0, 1);
   │                   ^^
   │
   = required by instantiating type parameter `T` of function `!=`

error: tuple type `(integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/neq_invalid.move:35:16
   │
35 │         (0, 1) != (1, 2, 3);
   │                ^^
   │
   = required by instantiating type parameter `T` of function `!=`
